--- a/.travis.yml
+++ b/.travis.yml
@@ -35,9 +35,9 @@ env:
   matrix:
     - TEST_TARGET=test-core
     - TEST_TARGET=test-jpa22
-    - TEST_TARGET=test-moxy
-    - TEST_TARGET=test-sdo
-    - TEST_TARGET="test-jpa-jse test-ext test-jpql test-wdf test-jpars test-dbws test-dbws-builder test-osgi"
+#    - TEST_TARGET=test-moxy
+#    - TEST_TARGET=test-sdo
+#    - TEST_TARGET="test-jpa-jse test-ext test-jpql test-wdf test-jpars test-dbws test-dbws-builder test-osgi"
     - TEST_TARGET=build-distribution
 
 jobs:
@@ -92,4 +92,4 @@ script:
   - $ANT_HOME/bin/ant -f antbuild.xml build
   - echo 'RUNNING TESTS, BE PATIENT...'
   - set -o pipefail
-  - $ANT_HOME/bin/ant -f antbuild.xml -Dtest.fail.fast=true -Dfail.on.error=true $TEST_TARGET | grep -E "\] Running |\] Tests run:"
+  - $ANT_HOME/bin/ant -f antbuild.xml -Dtest.fail.fast=true -Dfail.on.error=true $TEST_TARGET"
